chrome/browser/ui/cocoa/share_menu_controller_browsertest.mm
@@ -20,6 +20,7 @@
 #include "net/base/mac/url_conversions.h"
 #include "testing/gtest_mac.h"
 #include "ui/base/l10n/l10n_util_mac.h"
+#include "ui/events/test/cocoa_test_event_utils.h"
 
 // Mock sharing service for sensing shared items.
 @interface MockSharingService : NSSharingService
@@ -212,4 +213,29 @@ IN_PROC_BROWSER_TEST_F(ShareMenuControllerTest, Histograms) {
                     error:[NSError errorWithDomain:@"" code:0 userInfo:nil]];
   tester.ExpectTotalCount(histogram_name, 3);
   tester.ExpectBucketCount(histogram_name, false, 1);
+}
+
+IN_PROC_BROWSER_TEST_F(ShareMenuControllerTest, MenuHasKeyEquivalent) {
+  // If this method isn't implemented, |menuNeedsUpdate:| is called any time
+  // *any* hotkey is used
+  ASSERT_TRUE([controller_ respondsToSelector:@selector
+                           (menuHasKeyEquivalent:forEvent:target:action:)]);
+
+  // Ensure that calling |menuHasKeyEquivalent:...| the first time populates the
+  // menu.
+  base::scoped_nsobject<NSMenu> menu([[NSMenu alloc] initWithTitle:@"Share"]);
+  EXPECT_EQ([menu numberOfItems], 0);
+  NSEvent* event = cocoa_test_event_utils::KeyEventWithKeyCode(
+      'i', 'i', NSKeyDown, NSCommandKeyMask | NSShiftKeyMask);
+  EXPECT_FALSE([controller_ menuHasKeyEquivalent:menu
+                                        forEvent:event
+                                          target:nil
+                                          action:nil]);
+  EXPECT_GT([menu numberOfItems], 0);
+
+  NSMenuItem* item = [menu itemAtIndex:0];
+  // |menuHasKeyEquivalent:....| shouldn't populate the menu after the first
+  // time.
+  [controller_ menuHasKeyEquivalent:menu forEvent:event target:nil action:nil];
+  EXPECT_EQ(item, [menu itemAtIndex:0]);  // Pointer equality intended.
 }
